[gd_scene load_steps=13 format=3 uid="uid://bel073bv2jmwl"]

[ext_resource type="Script" path="res://Battle/Script/Battle.gd" id="1_3knij"]
[ext_resource type="Texture2D" uid="uid://bqgmtty64ja1" path="res://Sketch/card_bkg_0.png" id="2_xhn41"]
[ext_resource type="Texture2D" uid="uid://cidjtmcuslgyk" path="res://Sketch/bf1.png" id="3_egnil"]
[ext_resource type="Script" path="res://Battle/DebugTool.gd" id="4_wl40b"]
[ext_resource type="Script" path="res://Battle/Script/Superdomain.gd" id="5_3ek0d"]
[ext_resource type="Script" path="res://Battle/Domain/SelfHeap.gd" id="6_hf3w8"]
[ext_resource type="Script" path="res://Battle/Domain/oppo_heap.gd" id="7_n8lm6"]
[ext_resource type="Script" path="res://Battle/Domain/SelfHand.gd" id="8_k8u83"]
[ext_resource type="Script" path="res://Battle/Domain/self_minion.gd" id="9_scbpq"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_fx01p"]
states/Start/position = Vector2(364, 100)

[sub_resource type="Animation" id="Animation_jrat8"]
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Card:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(22, -0.25, 0, 0.7, -2, 31, -0.2, 4, 0, 0),
"times": PackedFloat32Array(0, 0.7)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Card:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.9)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Card:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.9)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s8go2"]
_data = {
"draw_card": SubResource("Animation_jrat8")
}

[node name="Battle" type="Node3D"]
script = ExtResource("1_3knij")

[node name="Node3D" type="Node3D" parent="."]

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80)
fov = 25.0

[node name="Card" type="Sprite3D" parent="."]
transform = Transform3D(4.37038e-08, -0.999826, 0.0186566, -1, -4.37114e-08, 0, 8.15505e-10, -0.0186566, -0.999826, 0, 0, 0)
visible = false
texture = ExtResource("2_xhn41")

[node name="Label" type="Label3D" parent="Card"]
text = "hehe"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_fx01p")

[node name="Field" type="Sprite3D" parent="."]
visible = false
texture = ExtResource("3_egnil")

[node name="OpenDebugTool" type="Button" parent="."]
offset_right = 113.0
offset_bottom = 36.0
text = "打开调试工具"

[node name="DebugTool" type="VBoxContainer" parent="."]
offset_left = 40.0
offset_top = 52.0
offset_right = 400.0
offset_bottom = 125.0
script = ExtResource("4_wl40b")

[node name="HBoxContainer" type="HBoxContainer" parent="DebugTool"]
layout_mode = 2
size_flags_vertical = 0

[node name="Button" type="Button" parent="DebugTool/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "抽卡"

[node name="Label" type="Label" parent="DebugTool/HBoxContainer"]
layout_mode = 2
text = "卡包系列"

[node name="TextEdit" type="TextEdit" parent="DebugTool/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Classic"

[node name="Label2" type="Label" parent="DebugTool/HBoxContainer"]
layout_mode = 2
text = "卡牌ID"

[node name="TextEdit2" type="TextEdit" parent="DebugTool/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"battle_anim": SubResource("AnimationLibrary_s8go2")
}

[node name="Superdomain" type="Node" parent="."]
script = ExtResource("5_3ek0d")

[node name="self_heap" type="Node" parent="Superdomain"]
script = ExtResource("6_hf3w8")

[node name="oppo_heap" type="Node" parent="Superdomain"]
script = ExtResource("7_n8lm6")

[node name="self_hand" type="Node" parent="Superdomain"]
script = ExtResource("8_k8u83")

[node name="self_minion" type="Node" parent="Superdomain"]
script = ExtResource("9_scbpq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]

[connection signal="pressed" from="OpenDebugTool" to="DebugTool" method="toggle_visibility"]
[connection signal="pressed" from="DebugTool/HBoxContainer/Button" to="." method="draw_test"]
[connection signal="pressed" from="DebugTool/HBoxContainer/Button" to="DebugTool" method="draw_test"]
